fix(hoveroverlay): set z-index

--- a/src/HoverOverlay.scss
+++ b/src/HoverOverlay.scss
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: stretch;
+    z-index: 20;
 
     transition: opacity 200ms ease-in-out;
 
